samples/_failures_safe/1761353504_ff9769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21859c24.c: In function ‘read_operator’:
./samples/SAFE/__tmp_21859c24.c:155:52: error: expected ‘)’ at end of input
  155 |     strncpy(token->value, lexer->input + start, len
      |            ~                                       ^
      |                                                    )
./samples/SAFE/__tmp_21859c24.c:155:5: error: expected declaration or statement at end of input
  155 |     strncpy(token->value, lexer->input + start, len
      |     ^~~~~~~
